test: modernize jvm tests and template coverage
Rewrite Scala unit specs with WordSpec/Matchers and property checks, update Java assertions, and run the scala-sbt example from the upstream Galaxio template in CI.